# rust-aws-helpers

./: README.md
aws-instance-info/: Cargo.toml  README.md  config.toml
aws-instance-info/src/: main.rs
aws-s3-worm/: .gitignore  Cargo.toml  config.toml
aws-s3-worm/src/: main.rs
