[package]
name = "aws-instance-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8" 
aws-sdk-ec2 = "1.3.0"
aws-config = "1.0.1" 
aws-types = "1.0.1" 
tokio = { version = "1", features = ["full"] }
prettytable-rs = "0.10.0"
# chrono = "0.4.19"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.1"